--- a/src/components/portifolio/window.css
+++ b/src/components/portifolio/window.css
@@ -9,7 +9,6 @@
   color: #000000;
   user-select: none;
   transition: box-shadow 0.2s ease;
-  z-index: 999;
   display: grid;
   grid-template-rows: 28px 1fr;
 }
@@ -201,8 +200,8 @@
   background-color: #362056;
 }
 
-#appes{
-  background-color: #0F3D2E;
+#appes {
+  background-color: #0f3d2e;
 }
 
 .criptohive:hover {
